<resources>
    <string name="app_name">Evcil Hayvanim</string>
    <string name="pet_lookup">Evcil Hayvan Bakımı</string>
    <string name="dog">Köpek</string>
    <string name="cat">Kedi</string>
    <string name="browser_key">AIzaSyCxnedrqfjp10ugO6ZyUGC_SoN6Wh9ZLpQ</string>
    <string name="bird">Kuş</string>
    <string name="fish">Balık</string>
    <string name="hamster">Hamster</string>
    <string name="parrot">Tavşan</string>
    <string name="dogPage">Köpek Sayfası</string>
    <string name="catPage">Kedi Sayfası</string>
    <string name="birdPage">Bird Page</string>
    <string name="fishPage">Balık Sayfası</string>
    <string name="hamsterPage">Hamster Sayfası</string>
    <string name="rabbitPage">Tavşan Sayfası</string>
    <string name="title_activity_menu">MenuActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mainPage">Ana Sayfa</string>
    <string name="shortest_shelter">En Yakın Barınak</string>
    <string name="shortest_vet">En Yakın Veteriner</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hello_shelter_fragment">Hello Shelter Fragment</string>
    <string name="hello_vet_fragment">Hello Vet Fragment</string>
    <string name="hello_dog_fragment">Hello Dog Fragment</string>
    <string name="rabbit">Tavşan</string>
    <string name="hello_cat_fragment">Hello Cat Fragment</string>
    <string name="hello_bird_fragment">Hello Bird Fragment</string>
    <string name="hello_fish_fragment">Hello Fish Fragment</string>
    <string name="hello_hamster_fragment">Hello Hamster Fragment</string>
    <string name="hello_rabbit_fragment">Hello Rabbit Fragment</string>
    <string name="leave">Ayrılık</string>
    <string name="dog_lookup">Evcil Köpek Bakımı</string>
    <string name="no_alone">Evde yalnız bırakmak bir seçenek değildir</string>
    <string name="RSPCA">Süresi ne olursa olsun, yavru köpeğinizi asla tek başına bırakmamalısınız. RSPCA\'ya göre, bir milyondan fazla köpek evde tek başına kaldığında endişelenmekte, gürültücü ve zarar verici olmakta, sıklıkla evi kirletmektedir. Bu nedenle tatile gidiyorsanız ve yalnızca hafta sonu için dahi gidiyorsanız, lütfen kendi hazırlıklarınızın evcil hayvanınızın gereksinimlerini engellemesine izin vermeyin. Önceden plan yapmanız mantıklı olacaktır.</string>
    <string name="dog_hostels">Köpek pansiyonları: Köpeğinizi saygın bir köpek pansiyonuna yerleştirirseniz, evcil hayvan dostu bir ortamda, köpekleri seven ve ne yaptığını bilen insanların sağladığı güvenilir bir bakım ve ilgiyi garanti altına alırsınız. Sizden isteyecekleri tek şey, güncel aşı belgesidir. Ayrıca, yokluğunuzda evcil hayvanınızın acil bakıma ihtiyaç duyması ihtimaline karşı, tesisin ya da sizin geçerli bir evcil hayvan sigortanız olması gerektiğini unutmayın.</string>
    <string name="veteriner">Veteriner hekiminiz, bölgenizdeki en iyi köpek pansiyonları konusunda tavsiyede bulunabilecektir.</string>
    <string name="friends">Arkadaşlar: Siz yokken evinizde kalmayı ve hem evinize, hem de yavru köpeğinize göz kulak olmayı teklif edecek arkadaşlara ya da aileye sahip olacak kadar şanslı olabilirsiniz. Ancak bu kişilerin yapması gerekenleri bildiğinden ve evcil hayvanınızla anlaşabileceklerinden emin olmalısınız. Evcil hayvanınız evden uzakta olmayı fazla rahatsız edici buluyorsa, ideal çözüm bu olacaktır.</string>
    <string name="basic_rules">Birkaç Temel Kural</string>
    <string name="text1">Her ihtiyacını kabul etmek iyi bir yöntem değildir</string>
    <string name="text2">Yavru köpeğiniz büyüdükçe, kendini kabul ettirmeye de ihtiyacı olacaktır. Yavru köpekler, mücadele zemini olarak sıklıkla öğün zamanlarını seçerler. Ancak ona boyun eğmeniz hata olur. Onun her talebine karşılık vermeyeceğinizi anlamasını sağlamalısınız. Ayrıca, kendinizi ve onun çevresinde yaşayan ailenin geri kalan üyelerini de kabul ettirmeniz gerekecektir. Örneğin yavru köpekler, mama kaplarının çevresi konusunda bölgelerine fazla düşkün ve sahiplenici olabilir; dolayısıyla mamasını yerken yaklaşılırsa karışıklık çıkaracaktır. Bu davranış oldukça güç ve anti-sosyal hale gelebilir; bu nedenle buna bir dur demek zorundasınız. Bunu sağlamak çok da güç değildir, yalnızca biraz sabırlı olun. Aşağıdaki adımları izlemeniz durumunda, yavru köpeğinizde mükemmel bir sofra adabı gelişmelidir.</string>
    <string name="azar_azar">Azar azar</string>
    <string name="txtfish1">Akvaryum Bakımı</string>
    <string name="txtfish2">Akvaryumda balık ve diğer su canlılarını beslemek günümüzde oldukça popüler hobilerdendir. Her ne kadar zahmetli bir iş olsa da günün sonunda verilen emeğin karşılığı huzurla alınmaktadır. Aslında biyolojik dengesi oturmuş, balıkları, bitkileri ve dekorasyonu tamamlanmış, kısacası düzene girmiş bir akvaryumun bakımı fazla çaba gerektirmez. Fakat balıkların sağlıklı ve akvaryumun güzel kalması için düzenli olarak bir takım gerekli bakımları yerine getirmelisiniz. Bu konuda yapılabilecek en iyi şey, aksatmadan uygulanacak bir takvim oluşturmaktır.</string>
    <string name="txtfish3">Akvaryum Temizliği</string>
    <string name="txtfish4">Akvaryum temizliği yaparken ayda bir %25 oranında su değişimi yapmak gerekir. Örneğin bu değişimi düzene oturtmak için her ayın son Pazar günü yapabilirsiniz. Su değişimi yaparken ısıtıcının fişini tedbir olarak çekmeyi ve değişimden sonra takmayı unutmayın. En az 48 saat havalanmış, 25 derece oda sıcaklığında çeşme suyu veya içme suyu kullanabilirsiniz. Bakımlı ve güzel kaldığı sürece akvaryumdan aldığınız keyif de devam edecektir.</string>
    <string name="txtfish5">Akvaryumuzun sağlıklı bir bitki örtüsü varsa akvaryum kumu yıllarca temizlemeden yerinde kalabilir.</string>
    <string name="txtfish6">Akvaryum Bakımında Her Gün Yapılması Gerekenler</string>
    <string name="txtfish7">Balıklarınıza günde 2 veya 3 kez birkaç dakika içinde bitirebilecekleri kadar yem verin. Fazla yem vermek hem balıklar için sağlıksızdır, hem de akvaryumun çabuk kirlenmesine sebebiyet verir.</string>
    <string name="txtfish8">Balıklarınızın davranızlarını ve iştahlarını genel olarak bir gözden geçirin. Herhangi bir anormal durum hastalık belirtisi olabilir. Hastabir balığı vakit kaybetmeden küçük bir karantina akvaryumuna ayırmak gerekir. Gereken ilaçlamalar bu küçük akvaryumda yapılabilir. Balıklarınızın toplu olarak yaşadığı büyük akvaryumunuza kesinlikle ilaç atmayın. İlçaların birçoğu akvaryumdaki yararlı bakterileri de öldürerek biyolojik dengeyi bozar.</string>
    <string name="txtfish9">Termometreye bir göz atarak suyun sıcaklığını kontrol edin. Kaliteli bir ısıtıcı termostatın akvaryum sıcaklığını ayarladığınız noktada yıllarca sabit tutulması gerekir. Fakat sıcaklıkta büyük oynamalar olursa nedenini araştırmak gerekirse de daha kaliteli bir akvaryum ısıtıcısı almak gerekir. Bu nedenler arasında ışıklandırma sistemi yüzünden veya doğrudan güneş aldığı için de akvaryum belli saatlerde ısınıyor olabilir.</string>
    <string name="txtfish10">Su çıkışına bakarak filtrenizin düzgün çalıştığından emin olun. Akvaryumda kaliteli bir filtrenin aylarca tıkanmadan ve yıllarca bozulmadan çalışabilmesi gerekir.</string>
    <string name="txtfish11">Akvaryum Bakımında Haftada Bir Yapılması Gerekenler</string>
    <string name="txtfish12">Sağlıklı bir akvaryumda suyun biyolojik dengesi gereği yosunlanmalar oluşur. Yosunlanan ön camları çizmeyen türden akvaryumlar için özel tasarlanmış mıknatıslı silecekler kullanarak haftada bir temizleyin.</string>
    <string name="txtfish13">Akvaryum Bakımında İki Haftada Bir Yapılması Gerekenler</string>
    <string name="txtfish14">Akvaryumda biriken artık maddelerin kısmen atılması ve eksilen minerallerin tamamlanması açısından %20–25 oranında düzenli su değişimleri oldukça önemlidir.</string>
    <string name="txtfish15">Bir akvaryum hortumu aracılığıyla akvaryum tankının suyunu %20–25 kadarını boşaltın. Bu suyu dipten çekerek akvaryum tabanında birikmiş olan tortuları da temizleyebilirsiniz. Boşalttığınız suyun yerine dolduracağınız, temiz bir kapta üzeri açık dinlenmiş suya, balık sağlığını tehdit eden klor ve ağır metalleri nötralize etmek için iyi bir akvaryum su düzenleyici kullanın. Kullanma talimatlarını ürünlerin üzerinde bulabilirsiniz.</string>
    <string name="txtfish16">Akvaryumuzda bol bitki özellikle Echinodorus türleri varsa suda eksilen demiri tamamlamak için dinlenmiş suya demirli sıvı gübre de eklemek yerinde olacaktır. Önerilen kullanma talimatlarını yine ürünlerin üzerinde bulabilirsiniz.</string>
    <string name="txtfish17">Büyük olan akvaryumlarda düzenli su değişimleri ayda bir olarak da yapılabilir. Önemli olan su değişimlerini belirlenmiş bir periyoda göre yapmak. Aksi halde balıklarınız da düzensiz bir su değişiminden olumsuz yönde etkilenebilir.</string>
    <string name="txtfish18">Akvaryum Bitkilerinin Budanması</string>
    <string name="txtfish19">Akvaryumuzun arka planına diktiğiniz ve hızlı uzayan tek gövdeden yaprak veren bitki türleri su yüzeyine çıktıkça budamak gerekir. Bitki gövdesini tepeden 15–20 aşağıdan keserek akvaryum tabanına gömün. Bir süre sonra kendiliğinden köklenmeye başlayacaktır.</string>
    <string name="txtfish20">Akvaryum Ön Filtrenin Temizlenmesi</string>
    <string name="txtfish21">Bazı akvaryumlarda, esas filtrenin aylarca tıkanmadan çalışmasını sağlayacak, kolayca temizlenen bir ön filtre düzeni bulunur. Bu ön filtrenin en azından iki haftada bir suda çalkalanarak temizlenmesi gerekir.</string>
    <string name="txtfish22">Akvaryum Bakımında Ayda Bir Yapılması Gerekenler</string>
    <string name="txtfish23">Akvaryumun için gerek olan 2 adet filtre vardır. İçine konan filtrelere, iç filtreler; dış kısmına konan filtrelere de dış filtre denir. Piyasada çok fazla filtre çeşidi olsa da, filtrelerin çoğunda en azından üç işlevi gerçekleştiren filtre malzemeleri bulunur.</string>
    <string name="txtfish24">Kaba kirleri tutan ince filtre malzemelerinin çabuk tıkanmasını önleyen (mekanik) kaba ön filtre malzemeleri</string>
    <string name="txtfish25">Üzerlerinde biyolojik arınmayı sağlayan yararlı bakterilerin kolonileştiği geniş yüzeyli biyolojik filtre malzemeleri</string>
    <string name="txtfish26">Filtrenin su çıkışından hemen önce yer alan, ince tortuları tutan (mekanik) ince filtre malzemeleri</string>
    <string name="txtfish27">Akvaryum Mekanik Filtre</string>
    <string name="txtfish28">Biyolojik filtre işlevi olmayan ya da az olan, sudaki tortuları tutmak için kullanılan filtredir. Mekanik akvaryum filtreleri önce içi su dolu bir kovada kaba kirlerinden arınmalı, sonra akar musluk altında iyice çalkalanarak temizlenmelidir. İnce mekanik filtre malzemesi çoğu zaman yenisiyle değiştirilir.</string>
    <string name="txtfish29">Biyolojik filtre malzemesi, yerleşmiş bakteri kolonilerine zarar vermemek için en iyisi eski akvaryum suyuyla hafifçe çalkalanmalıdır. Biyolojik filtre malzemesi yenilense dahi içine bir miktar eski biyolojik filtre malzemesinden katılarak aşılanmalıdır. Bu yeterli bakteri popülasyonunun çabucak oluşmasına katkı sağlayacaktır.</string>
    <string name="txtfish30">Kaynak: https://www.petburada.com/blog/icerik/akvaryum-bakimi</string>
    <string name="akvaryum_canlilar">Akvaryum Canlıları</string>
    <string name="shortest_petshop">En Yakın Petshop</string>
</resources>